--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.20",
     "antd": "^4.6.3",
+    "classnames": "^2.2.6",
+    "husky": "^4.3.0",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "umi": "^3.2.20",
     "yorkie": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.10"
   }
 }
